# freemine

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README.md  configure.ac
doc/: ChangeLog
man/: FreeMine.1  Makefile.am
packaging/: move_assets.sh
project/: Minesweeper.pod
src/: CMakeLists.txt  Makefile.am  draw.c  help_routines.c  lead.c  main.c  menu.c  mines.c  mines.h
src/cmake/: FindSDL2.cmake
src/headers/: FreeMine_config.h  mines.h
src/libs/: draw.c  help_routines.c  lead.c  menu.c  mines.c
src/scripts/: pics.sh
